--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - teap
     volumes:
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./data/gateway/:/www/media/mail_autoconfig:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     networks:
       - ldap-frontend
